--- a/css/site.css
+++ b/css/site.css
@@ -1,6 +1,18 @@
 body{
     background-color: lightgoldenrodyellow;
-    padding: 0 2rem;
+    padding: 50px 30px 50px 80px;
+    font-family: Arial, Verdana, sans-serif;
+    
+}
+
+#check-amounts {
+    width: 450px;
+    border: 3px solid #000000;
+    padding: 25px 50px 75px;
+    
+    /* display: flex;
+    justify-content: left; */
+
 }
 
 #print-area {
