--- a/css/site.css
+++ b/css/site.css
@@ -8,7 +8,7 @@ body{
 #check-amounts {
     width: 35%;
     border: 3px solid #000000;
-    padding: 25px 50px 75px;
+    padding: 50px;
     
     /* display: flex;
     justify-content: left; */
